added new lines to html

--- a/Hello-world.html
+++ b/Hello-world.html
@@ -9,5 +9,6 @@
 <body>
     <p>this is line 1 -added in commit 1</p>
     <p>this is line 2 -added in commit 2</p>
+    <p>this is line 3 -added in commit 3</p>
 </body>
 </html>
